# dex

./: .gitignore  .pre-commit-config.yaml  CONDA_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
data/: initial_annotation.json
deprecated/: multiproc_utils.py
examples/: load_entire_library.py  load_one_book.py  ocr_one_book.py
src/dex/: __init__.py  caching.py  data_model.py  dewarping.py  heuristics.py  isbn_utils.py  layoutlmv3.py  library.py  multiproc_utils.py  ocr_utils.py  path_utils.py
src/dex/data_model/: __init__.py  filing.py  images.py  shelving.py  surya.py
tests/: core_test.py  dex_core_test.py  ocr_test.py
